--- a/shapeshifter/src/components/Button/Button.css
+++ b/shapeshifter/src/components/Button/Button.css
@@ -3,3 +3,12 @@ button {
   max-width: 100%;
   margin: 2vh 2vw;
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow: hidden;
+  }
+  button {
+    margin: 5vh 5vw;
+  }
+}
