--- a/shapeshifter/src/components/Shape/Shape.css
+++ b/shapeshifter/src/components/Shape/Shape.css
@@ -1,21 +1,8 @@
 .shape {
-  position: relative;
-  width: 54px;
-  box-sizing: content-box;
-  border-width: 50px 18px 0;
-  border-style: solid;
-  border-color: #d3c4e3 transparent;
-}
-.shape:before {
-  content: "";
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: -85px;
-  left: -18px;
-  border-width: 0 45px 35px;
-  border-style: solid;
-  border-color: transparent transparent #d3c4e3;
+  background: #d3c4e3;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 
 /* Circle */
@@ -35,3 +22,22 @@ border-radius: 50%; */
 /* background: #d3c4e3;
 width: 100px;
 height: 100px; */
+
+/* position: relative;
+  width: 54px;
+  box-sizing: content-box;
+  border-width: 50px 18px 0;
+  border-style: solid;
+  border-color: #d3c4e3 transparent;
+}
+.shape:before {
+  content: "";
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -85px;
+  left: -18px;
+  border-width: 0 45px 35px;
+  border-style: solid;
+  border-color: transparent transparent #d3c4e3;
+} */
