Fully functional! Now, let's add some more styling!

--- a/shapeshifter/src/components/Shape/Shape.css
+++ b/shapeshifter/src/components/Shape/Shape.css
@@ -1,36 +1,36 @@
-.shape {
+/* Circle */
+.circle {
   background: #d3c4e3;
   width: 100px;
   height: 100px;
   border-radius: 50%;
 }
-
-/* Circle */
-/* background: #d3c4e3;
-width: 100px;
-height: 100px;
-border-radius: 50%; */
-
 /* Triangle */
-/* width: 0;
+.triangle {
+  width: 0;
   height: 0;
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
-  border-bottom: 100px solid #d3c4e3; */
+  border-bottom: 100px solid #d3c4e3;
+}
 
 /* Square */
-/* background: #d3c4e3;
-width: 100px;
-height: 100px; */
+.square {
+  background: #d3c4e3;
+  width: 100px;
+  height: 100px;
+}
 
-/* position: relative;
+/* Pentagon */
+.pentagon {
+  position: relative;
   width: 54px;
   box-sizing: content-box;
   border-width: 50px 18px 0;
   border-style: solid;
   border-color: #d3c4e3 transparent;
 }
-.shape:before {
+.pentagon:before {
   content: "";
   position: absolute;
   height: 0;
@@ -40,4 +40,78 @@ height: 100px; */
   border-width: 0 45px 35px;
   border-style: solid;
   border-color: transparent transparent #d3c4e3;
-} */
+}
+
+/* Hexagon */
+.hexagon {
+  width: 100px;
+  height: 55px;
+  background: #d3c4e3;
+  position: relative;
+}
+.hexagon:before {
+  content: "";
+  position: absolute;
+  top: -25px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 25px solid #d3c4e3;
+}
+.hexagon:after {
+  content: "";
+  position: absolute;
+  bottom: -25px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-top: 25px solid #d3c4e3;
+}
+
+/* Octagon */
+.octagon {
+  width: 100px;
+  height: 100px;
+  background: #d3c4e3;
+  position: relative;
+}
+.octagon:before {
+  content: "";
+  width: 42px;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-bottom: 29px solid #d3c4e3;
+  border-left: 29px solid white;
+  border-right: 29px solid white;
+}
+.octagon:after {
+  content: "";
+  width: 42px;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-top: 29px solid #d3c4e3;
+  border-left: 29px solid white;
+  border-right: 29px solid white;
+}
+
+/* PacMan */
+.pacman {
+  width: 0px;
+  height: 0px;
+  border-right: 60px solid transparent;
+  border-top: 60px solid yellow;
+  border-left: 60px solid yellow;
+  border-bottom: 60px solid yellow;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+}
